# ShelDrive

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build.yml
marketing/: docs.html  index.html
scripts/: build-sidecar.sh
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts  protocol.ts  shelby-client.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  crypto.rs  lib.rs  main.rs  safety.rs  state.rs
src-tauri/src/bridge/: mod.rs  shelby.rs
src-tauri/src/db/: index.rs  mod.rs  schema.rs
src-tauri/src/fs/: fuse_driver.rs  mod.rs  winfsp_driver.rs
src/components/: FileActivity.tsx  MountControls.tsx  Settings.tsx  StatusIndicator.tsx  TrayPanel.tsx
src/hooks/: useMountStatus.ts
src/lib/: tauri.ts
src/styles/: global.css
