[package]
name = "sheldrive"
version = "0.1.0"
edition = "2021"

[lib]
name = "sheldrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fuser = { version = "0.17", features = ["libfuse3"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
filetime = "0.2"
